[package]
name = "yft-auth"
version = "0.1.0"
edition = "2024"

[features]
default = ["ql", "axum"]

ql = ["dep:yft-service-sdk", "yft-service-sdk/ql"]
axum = ["dep:yft-service-sdk", "dep:axum-extra"]


[dependencies]
yft-service-sdk = { optional = true, git = "https://github.com/ITYFT/yft-service-sdk.git", tag = "0.1.22", features = [
    "ql",
] }

chrono = "*"
jwt = "*"
hmac = "*"
sha2 = "*"
axum-extra = { version = "0.10.1", optional = true, features = ["typed-header"] }
